web/src/app.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';
@plugin '@tailwindcss/forms';

@import '@skeletonlabs/skeleton';
@import '@skeletonlabs/skeleton/optional/presets';
@import '@skeletonlabs/skeleton/themes/rose';

@source '../node_modules/@skeletonlabs/skeleton-svelte/dist';

@theme {
	--breakpoint-gp: 70rem;
	--breakpoint-ag: 54rem;
	--breakpoint-bd: 37rem;
}

@layer base {
	input[type='number']::-webkit-outer-spin-button,
	input[type='number']::-webkit-inner-spin-button,
	input[type='number'] {
		-webkit-appearance: none;
		margin: 0;
		-moz-appearance: textfield !important;
	}

	/* Hack to grow the FileUpload component from Skeleton */
	[data-part='dropzone'] {
		@apply flex grow flex-col;
	}
}

